--- a/Seção04/index.html
+++ b/Seção04/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+	<h1>Titulo do meu site</h1>
+	<p>Texto do meu site, aqui tem alguma coisa</p>
+	<a href="#">Clique aqui</a>
+  <div>
+    <p>Teste</p>
+  </div>
 </body>
 </html>
