--- a/Seção06/index.html
+++ b/Seção06/index.html
@@ -5,9 +5,189 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agency</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,900;1,100;1,300;1,700&display=swap" rel="stylesheet">
+    <!-- Fonte Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- CSS do Projeto -->
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
-    <h1>Teste</h1>
+    <header>
+        <div class="nav-container">
+            <a href="#" class="brand">
+                <i class="fas fa-brain"></i> Agency
+            </a>
+            <nav>
+                <ul class="nav-container-navbar">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Seviços</a>
+                    </li>
+                    <li>
+                        <a href="#">Contato</a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn btn-primary">Entrar</a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn">Registrar</a>
+                    </li>
+                </ul>
+            </nav>
+            <i class="fas fa-bars"></i>
+        </div>
+    </header>
+    <main class="services-container">
+        <h2>O que fazemos</h2>
+        <div class="service-card-container">
+            <div class="service-card">
+                <i class="fab fa-buffer"></i>
+                <h3>Desenvolvimento Fullstack</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
+            </div>
+            <div class="service-card">
+                <i class="fab fa-buffer"></i>
+                <h3>Desenvolvimento Fullstack</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
+            </div>
+            <div class="service-card">
+                <i class="fab fa-buffer"></i>
+                <h3>Desenvolvimento Fullstack</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
+            </div>
+            <div class="service-card">
+                <i class="fab fa-buffer"></i>
+                <h3>Desenvolvimento Fullstack</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
+            </div>
+            <div class="service-card">
+                <i class="fab fa-buffer"></i>
+                <h3>Desenvolvimento Fullstack</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
+            </div>
+            <div class="service-card">
+                <i class="fab fa-buffer"></i>
+                <h3>Desenvolvimento Fullstack</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
+            </div>
+        </div>
+        <a href="#" class="btn btn-primary btn-rounded">Veja todos os serviços</a>
+    </main>
+    <div class="jobs-container">
+        <div class="jobs-list">
+            <div class="first-job">
+                <div class="job-card-cover" id="job1">
+                    <p class="job-card-title">Projeto 1</p>
+                    <p class="job-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ut cumque animi unde. Consectetur asperiores quo odio non quas cumque ratione est corrupti ex, adipisci quod sapiente! Iste, maxime similique!</p>
+                </div>
+            </div>
+            <div class="other-jobs-container">
+              <div class="job-card" id="job2">
+                <div class="job-card-cover">
+                  <p class="job-card-title">Projeto 2</p>
+                  <p class="job-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ut cumque animi unde. Consectetur asperiores quo odio non quas cumque ratione est corrupti ex, adipisci quod sapiente! Iste, maxime similique!</p>
+                </div>
+              </div>
+              <div class="job-card" id="job3">
+                <div class="job-card-cover">
+                  <p class="job-card-title">Projeto 3</p>
+                  <p class="job-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ut cumque animi unde. Consectetur asperiores quo odio non quas cumque ratione est corrupti ex, adipisci quod sapiente! Iste, maxime similique!</p>
+                </div>
+              </div>
+              <div class="job-card" id="job4">
+                <div class="job-card-cover">
+                  <p class="job-card-title">Projeto 4</p>
+                  <p class="job-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ut cumque animi unde. Consectetur asperiores quo odio non quas cumque ratione est corrupti ex, adipisci quod sapiente! Iste, maxime similique!</p>
+                </div>
+              </div>
+              <div class="job-card" id="job5">
+                <div class="job-card-cover">
+                  <p class="job-card-title">Projeto 5</p>
+                  <p class="job-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ut cumque animi unde. Consectetur asperiores quo odio non quas cumque ratione est corrupti ex, adipisci quod sapiente! Iste, maxime similique!</p>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-desc-contaiber">
+          <h3 class="footer-title">Agency</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt maiores voluptatem voluptas, architecto eum quae molestias nesciunt qui similique molestiae doloremque error obcaecati deserunt suscipit amet labore, iure ut blanditiis.</p> 
+        </div>
+        <div class="footer-link-container">
+          <div class="footer-link-container-list">
+            <p class="footer-title">Links</p>
+            <ul>
+              <li>
+                <a href="#">Base de Conhecimentos</a>
+              </li>
+              <li>
+                <a href="#">Trabalhe Conosco</a>
+              </li>
+              <li>
+                <a href="#">Ultimos Projetos</a>
+              </li>
+              <li>
+                <a href="#">Politicas de Privacidade</a>
+              </li>
+              <li>
+                <a href="#">Contatos</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-link-container-list">
+            <p class="footer-title">Links</p>
+            <ul>
+              <li>
+                <a href="#">Base de Conhecimentos</a>
+              </li>
+              <li>
+                <a href="#">Trabalhe Conosco</a>
+              </li>
+              <li>
+                <a href="#">Ultimos Projetos</a>
+              </li>
+              <li>
+                <a href="#">Politicas de Privacidade</a>
+              </li>
+              <li>
+                <a href="#">Contatos</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-link-container-list">
+            <p class="footer-title">Links</p>
+            <ul>
+              <li>
+                <a href="#">Base de Conhecimentos</a>
+              </li>
+              <li>
+                <a href="#">Trabalhe Conosco</a>
+              </li>
+              <li>
+                <a href="#">Ultimos Projetos</a>
+              </li>
+              <li>
+                <a href="#">Politicas de Privacidade</a>
+              </li>
+              <li>
+                <a href="#">Contatos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-copy-rigth-container">
+          <p>&copy; 2021 Company</p>
+          <p>A melhor agencia web para seus projetos</p>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
