--- a/Seção06/index.html
+++ b/Seção06/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <header>
+    <header id="main-banner">
         <div class="nav-container">
             <a href="#" class="brand">
                 <i class="fas fa-brain"></i> Agency
@@ -42,6 +42,11 @@
             </nav>
             <i class="fas fa-bars"></i>
         </div>
+        <div class="title-container">
+          <h2>Nós desenvolvemos</h2>
+          <h1>Poderosas Experiências</h1>
+          <a href="#" class="btn btn-primary btn-rounded">Fazer Orçamento</a>
+        </div>
     </header>
     <main class="services-container">
         <h2>O que fazemos</h2>
@@ -52,28 +57,28 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
             </div>
             <div class="service-card">
-                <i class="fab fa-buffer"></i>
-                <h3>Desenvolvimento Fullstack</h3>
+                <i class="fas fa-bolt"></i>
+                <h3>Sites leves e rápidos</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
             </div>
             <div class="service-card">
-                <i class="fab fa-buffer"></i>
-                <h3>Desenvolvimento Fullstack</h3>
+                <i class="fas fa-card-plus"></i>
+                <h3>E-commerces</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
             </div>
             <div class="service-card">
-                <i class="fab fa-buffer"></i>
-                <h3>Desenvolvimento Fullstack</h3>
+                <i class="fas fa-chart-line"></i>
+                <h3>SEO</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
             </div>
             <div class="service-card">
-                <i class="fab fa-buffer"></i>
-                <h3>Desenvolvimento Fullstack</h3>
+                <i class="fas fa-chess-pawn"></i>
+                <h3>Estrátegias de Marketing</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
             </div>
             <div class="service-card">
-                <i class="fab fa-buffer"></i>
-                <h3>Desenvolvimento Fullstack</h3>
+                <i class="fas fa-cloud"></i>
+                <h3>Hospesagem AWS/Azure</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea optio adipisci dolores perferendis dolore neque recusandae accusamus, deleniti eaque commodi placeat unde dolorem fugit corrupti, voluptatibus aperiam voluptatum, perspiciatis ad!</p>
             </div>
         </div>
@@ -117,7 +122,7 @@
     </div>
     <footer>
       <div class="footer-container">
-        <div class="footer-desc-contaiber">
+        <div class="footer-desc-container">
           <h3 class="footer-title">Agency</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt maiores voluptatem voluptas, architecto eum quae molestias nesciunt qui similique molestiae doloremque error obcaecati deserunt suscipit amet labore, iure ut blanditiis.</p> 
         </div>
@@ -183,7 +188,7 @@
             </ul>
           </div>
         </div>
-        <div class="footer-copy-rigth-container">
+        <div class="footer-copy-right-container">
           <p>&copy; 2021 Company</p>
           <p>A melhor agencia web para seus projetos</p>
         </div>
