--- a/Seção08-Valores_Operadores/index.html
+++ b/Seção08-Valores_Operadores/index.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/main.css">
-  <title>Document</title>
+  <title>Valores e Operadores</title>
 </head>
 <body>
-  
+  <p>Test01</p>
+  <h1>Test02</h1>
 </body>
 </html>
